@@ -68,8 +68,9 @@
 	fixed subtle noon/midnight-related bugs in date/time translation
 	updated mysql connection to get affected rows when not using the
 		statement api
-	updated mysql connection not to use the statement API on windows
-		(for now)
+	updated mysql connection not to use the statement API on windows,
+		for now
+	disabled mysql_change_user, for now
 
 0.58 - updated spawn() calls to detach on windows
 	added support for sqlrelay.conf.d
